<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.SetNameActivity">
    <!--<TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="24sp"
        android:textColor="@color/colorDark"
        android:text="@string/title_register_info_page">

    </TextView>-->

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="254dp"
        android:src="@drawable/register_example" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/title_regist_info"
        android:textColor="@color/colorDark"
        android:textSize="24sp">

    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:text="@string/register_info_one">

    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/register_info_two">

    </TextView>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:text="@string/enter_name">
        </TextView>

        <EditText
            android:id="@+id/et_setName"
            android:layout_weight="1"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </EditText>
        <Button
            android:id="@+id/btn_to_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:background="@drawable/ripple_bg"
            android:layout_gravity="center_horizontal"
            android:text="@string/start_to_register">

        </Button>
    </LinearLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ripple_bg"
        android:text="进入测温"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:onClick="TemperatureMeasure">

    </Button>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <EditText
            android:id="@+id/et_getName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="1">

        </EditText>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="DeleteRegister"
            android:background="@drawable/ripple_bg"
            android:text="删除注册人脸信息">

        </Button>
    </LinearLayout>

</LinearLayout>