<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/rl_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.BaseActivity">
    <SurfaceView
        android:id="@+id/sv_camera"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </SurfaceView>

    <com.supoin.thermometer.widget.FaceRectView
        android:id="@+id/face_rect_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/circle_register_bg_black" />

    <!--<ImageView
        android:id="@+id/img_circle"
        android:layout_marginTop="128dp"
        android:layout_marginLeft="32dp"
        android:layout_width="290.5dp"
        android:layout_height="290.5dp"
        android:src="@drawable/ic_color_circle">-->
    <ImageView
        android:id="@+id/img_circle"
        android:layout_marginTop="135dp"
        android:layout_marginLeft="39dp"
        android:layout_width="279dp"
        android:layout_height="279dp"
        android:src="@drawable/ic_color_circle_deep">

    </ImageView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_mask_tips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Tips_wear_mask"
            android:textColor="@color/colorWhite"
            android:layout_weight="1"
            android:textSize="24sp">

        </TextView>
        <TextView
            android:id="@+id/tv_turn_face"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Tips_turn_face"
            android:textColor="@color/colorWhite"
            android:visibility="gone"
            android:textSize="24sp">

        </TextView>

    </LinearLayout>
    <ImageView
        android:id="@+id/image_face_icon"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="410dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_face_icon"
        tools:ignore="ContentDescription">
    </ImageView>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_marginTop="500dp"
        android:layout_marginStart="28dp">

        <TextView
            android:id="@+id/tv_mask_status"
            android:layout_width="262dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/clolorPurple"
            android:textSize="22sp">

        </TextView>

        <TextView
            android:id="@+id/tv_name_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/clolorPurple"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:textSize="22sp">

        </TextView>

        <TextView
            android:id="@+id/tv_mask_over"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/clolorPurple"
            android:layout_weight="1"
            android:textSize="22sp">

        </TextView>

    </LinearLayout>
    <Button
        android:id="@+id/btn_Click"
        android:layout_width="80dp"
        android:layout_height="35dp"
        android:layout_alignBottom="@id/face_rect_view"
        android:layout_centerInParent="true"
        android:layout_gravity="center_vertical"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorWhite"
        android:visibility="invisible"
        android:text="@string/button_next_step" />

</RelativeLayout>